# delishes-chatbot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
frontend/: app.py
scout/: env.py  graph.py  tools.py
scout/prompts/: scout.md
